--- a/Contact.html
+++ b/Contact.html
@@ -65,7 +65,7 @@
               </div>
               <br><br>
               <div class="InputBox">
-                <label class="LabelInput" for="nome">Número de Celular</label>
+                <label class="LabelInput" for="nome">Número de Telefone</label>
                 <input type="tel" name="Número de Celular" id="Número de Celular" class="InputUser" required>
                 
               </div>
