--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SafeAdventure</title>
     <link rel="stylesheet" type="text/css" href="ContactStyle.css">
+    <link rel="shortcut icon" type="imagex/png" href="imagem/logo.jpeg">
 </head>
 <body>
 
@@ -13,7 +14,7 @@
             <img src="imagem/logo.jpeg" id="img-logo" alt="logosite"</img>
           </div>
         <div id="texto-logo">
-          <a id="texto" href="file:///C:/Users/victi/Desktop/T2-WebDesign/index.html">SAFE ADVENTURE</a>
+          <a id="texto" href="index.html">SAFE ADVENTURE</a>
         </div>
         <div id="barra-pesquisa">
           
@@ -22,13 +23,13 @@
         <div id="menu">
           <ul id="menu-list">
             <li id="home">
-              <a  class="link" href="file:///C:/Users/victi/Desktop/T2-WebDesign/index.html">HOME</a>
+              <a  class="link" href="index.html">HOME</a>
             </li>
             <li id="store">
-              <a  class="link" href="file:///C:/Users/victi/Desktop/T2-WebDesign/Store.html">STORE</a>
+              <a  class="link" href="Store.html">STORE</a>
             </li>
             <li id="contact">
-              <a  class="link" href="file:///C:/Users/victi/Desktop/T2-WebDesign/Contact.html">CONTACT</a>
+              <a  class="link" href="Contact.html">CONTACT</a>
           </ul>
         </div>
       </nav> 
