--- a/Store.html
+++ b/Store.html
@@ -23,13 +23,13 @@
         <div id="menu">
           <ul id="menu-list">
             <li id="home">
-              <a  class="link" href="file:///C:/Users/victi/Desktop/T2-WebDesign/index.html">HOME</a>
+              <a  class="link" href="index.html">HOME</a>
             </li>
             <li id="store">
-              <a  class="link" href="file:///C:/Users/victi/Desktop/T2-WebDesign/Store.html">STORE</a>
+              <a  class="link" href="Store.html">STORE</a>
             </li>
             <li id="contact">
-              <a  class="link" href="file:///C:/Users/victi/Desktop/T2-WebDesign/Contact.html">CONTACT</a>
+              <a  class="link" href="Contact.html">CONTACT</a>
           </ul>
         </div>
       </nav>
