--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <div id="menu">
           <ul id="menu-list">
             <li id="home">
-              <a  class="link" href="file:///C:/Users/victi/Desktop/T2-WebDesign/index.html">HOME</a>
+              <a  class="link" href="index.html">HOME</a>
             </li>
             <li id="store">
-              <a  class="link" href="file:///C:/Users/victi/Desktop/T2-WebDesign/Store.html">STORE</a>
+              <a  class="link" href="Store.html">STORE</a>
             </li>
             <li id="contact">
-              <a  class="link" href="file:///C:/Users/victi/Desktop/T2-WebDesign/Contact.html">CONTACT</a>
+              <a  class="link" href="Contact.html">CONTACT</a>
                 
               </li>
           </ul>
@@ -37,7 +37,7 @@
       </nav>
           <div id="content">
             <div id="texto-central">
-              <h1 >SafeAdventure, a mais de 5 anos no mercado de equipamentos de sobrevivência tornando suas trilhas seguras e te transformando em um(a) verdadeiro sobrevivente. Domine a selva e volte para casa seguro(a).</h1>
+              <h1 >SafeAdventure, há mais de 5 anos no mercado de equipamentos de sobrevivência tornando suas trilhas seguras e te transformando em um(a) verdadeiro sobrevivente. Domine a selva e volte para casa seguro(a).</h1>
             </div> 
           </div>
 </body>
